# CursorMover

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  run.ps1  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
cursor_mover/: __init__.py  __main__.py  bootstrap.py  cli.py  console.py  copying.py  cursor_paths.py  locks.py  merge.py  prompts.py  tui.py  workspace_id.py  workspace_storage.py  workspace_uri.py
tests/: __init__.py  test_copying.py  test_locks.py  test_merge_composer_data.py  test_merge_workspace_state.py  test_workspace_id_windows.py  test_workspace_storage.py  test_workspace_uri.py
